--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,8 @@
     // 本アプリで使うクラスの指定。const は定数の宣言。変更できない変数と思えば良い。
     const db = "m";
 
+    
+
     function fetchAll() {
       let TestDataClass = ncmb.DataStore(db);
       TestDataClass.fetchAll()
@@ -54,6 +56,7 @@
   </div>
   <div id="button">
     <button class="btn" onclick="fetchAll()">Fetch All</button>
+    <button class="btn" onclick="searchName()">Name</button><br>
   </div>
   <div id="message">message area</div>
 </body>
