lessボタンの追加

--- a/www/index.html
+++ b/www/index.html
@@ -69,6 +69,7 @@
   <div id="button">
     <button class="btn" onclick="fetchAll()">Fetch All</button>
     <button class="btn" onclick="searchName()">Name</button><br>
+    <button class="btn" onclick="searchLevelLT()">Less &lt;</button>
   </div>
   <div id="message">message area</div>
 </body>
