levelの要素追加

--- a/www/index.html
+++ b/www/index.html
@@ -36,6 +36,16 @@
             })
  
     }
+    function searchLevelLT(){
+        let TestDataClass = ncmb.DataStore(db);
+        let level = parseInt($("#level").val());
+        TestDataClass
+            .lessThanOrEqualTo("level",level)
+            .fetchAll()
+            .then(function(results){
+                showResults(results);
+            })
+    }
 
     function showResults(results) {
       // テーブルのヘッダを生成
