--- a/www/index.html
+++ b/www/index.html
@@ -80,6 +80,7 @@
     <button class="btn" onclick="fetchAll()">Fetch All</button>
     <button class="btn" onclick="searchName()">Name</button><br>
     <button class="btn" onclick="searchLevelLT()">Less &lt;</button>
+    <button class="btn" onclick="searchLevel()">Level</button>
   </div>
   <div id="message">message area</div>
 </body>
