--- a/www/index.html
+++ b/www/index.html
@@ -47,6 +47,17 @@
             })
     }
 
+      function searchLevel(){
+        let TestDataClass = ncmb.DataStore(db);
+        let level = parseInt($("#level").val());
+        TestDataClass
+            .equalTo("level",level)
+            .fetchAll()
+            .then(function(results){
+                showResults(results);
+            })
+    }
+
     function showResults(results) {
       // テーブルのヘッダを生成
       let msg = "<table><tr><th>name</th><th>Lvl</th><th>attack</th><th>defence</th></tr>";
