二つ目のlessを追加

--- a/www/index.html
+++ b/www/index.html
@@ -103,6 +103,7 @@
     <button class="btn" onclick="searchLevelLT()">Less &lt;</button>
     <button class="btn" onclick="searchLevel()">Level</button>
     <button class="btn" onclick="searchLevelGT()">&lt; Over </button><br>
+    <button class="btn" onclick="searchAttackLT()">Less &lt;</button>
   </div>
   <div id="message">message area</div>
 </body>
