知能のボタンを追加

--- a/www/index.html
+++ b/www/index.html
@@ -104,6 +104,7 @@
     <button class="btn" onclick="searchLevelLT()">Less &lt;</button>
     <button class="btn" onclick="searchLevel()">Level</button>
     <button class="btn" onclick="searchLevelGT()">&lt; Over </button><br>
+    <button class="btn" onclick="searchIntelligence()"> Intelligence </button><br>
   </div>
   <div id="message">message area</div>
 </body>
