--- a/www/index.html
+++ b/www/index.html
@@ -100,7 +100,7 @@
 </head>
 
 <body>
-  <h1>mBaaS search</h1>
+  <h1>human score</h1>
   <div>
     <label for="name">name:</label>
     <input id="name" type="text" placeholder="monster name">
